<?xml version="1.0"?>
<package>
  <name>orientus_sdk_c</name>
  <version>0.0.2</version>
  <description>The Orientus C SDK</description>
  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Nick Otero</author>
  <url>http://wiki.ros.org/orientus_sdk_c</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
