<?xml version="1.0"?>
<package>
  <name>orientus_sdk_c</name>
  <version>0.0.3</version>
  <description>The Orientus C SDK</description>
  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Nick Otero</author>
  <url>http://wiki.ros.org/orientus_sdk_c</url>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/orientus_sdk_c</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/orientus_driver/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/orientus_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
